--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <h2>学歴</h2>
     <table>
       <tr><td>桐蔭学園高等学校 アドバンスコース [2019/04～2022/03]</td></tr>
-      <tr><td>法政大学 情報科学部 ディジタルメディア学科 [2022/04 入学]</td></tr>
+      <!-- 変更箇所：ディジタルメディア学科 -> コンピュータ科学科 -->
+      <tr><td>法政大学 情報科学部 コンピュータ科学科 [2022/04 入学]</td></tr>
       <tr><td>法政大学 情報科学部 コンピュータ科学科 メディア科学コース [2026/03 卒業見込]</td></tr>
     </table>
     <h2>保有資格</h2>
@@ -47,7 +48,8 @@
     <h2>Education</h2>
     <table>
       <tr><td>Toin Gakuen High School, Advanced Course [2019/04 ~ 2022/03]</td></tr>
-      <tr><td>Hosei University, Faculty of Computer and Information Sciences, Department of Digital Media (Enrolled: 2022/04)</td></tr>
+      <!-- 変更箇所：Department of Digital Media -> Department of Computer Science -->
+      <tr><td>Hosei University, Faculty of Computer and Information Sciences, Department of Computer Science (Enrolled: 2022/04)</td></tr>
       <tr><td>Hosei University, Faculty of Computer and Information Sciences, Dept. of Computer Science, Media Science Course (Expected Graduation: 2026/03)</td></tr>
     </table>
     <h2>Qualifications</h2>
@@ -73,7 +75,8 @@
     <h2>教育</h2>
     <table>
       <tr><td>桐蔭学园高级中学 高级课程 [2019/04 ~ 2022/03]</td></tr>
-      <tr><td>法政大学 信息科学部 数字媒体学科 [2022/04 入学]</td></tr>
+      <!-- 変更箇所：数字媒体学科 -> 计算机科学科 -->
+      <tr><td>法政大学 信息科学部 计算机科学科 [2022/04 入学]</td></tr>
       <tr><td>法政大学 信息科学部 计算机科学科 媒体科学课程 [预计 2026/03 毕业]</td></tr>
     </table>
     <h2>资历</h2>
